@@ -27,6 +27,8 @@ import com.powsybl.openrao.searchtreerao.result.impl.RangeActionSetpointResultIm
 import com.powsybl.openrao.searchtreerao.result.impl.RemedialActionActivationResultImpl;
 import com.powsybl.openrao.sensitivityanalysis.AppliedRemedialActions;
 
+import java.util.Collections;
+import java.util.Objects;
 import java.util.Set;
 
 /**
@@ -85,7 +87,7 @@ public class PrePerimeterSensitivityAnalysis extends AbstractMultiPerimeterSensi
             initialFlowResult,
             operatorsNotSharingCras,
             raoParameters,
-            Set.of(crac.getPreventiveState())
+            Objects.isNull(crac.getPreventiveState()) ? Collections.emptySet() : Set.of(crac.getPreventiveState())
         );
 
         return runAndGetResult(network, objectiveFunction, reportNode);
